Cleanup and document

--- a/config/docker-compose-production.yml
+++ b/config/docker-compose-production.yml
@@ -24,5 +24,5 @@ services:
       - nginx
     environment:
       DEBUG: formio:*
-      NODE_CONFIG: '{"mongo": "mongodb+srv://ops-portal:eloque@roebling-portal-ap-sout.bmack.mongodb.net/formioapp-prod2?retryWrites=true&w=majority", "host": "54.79.191.17:3001", "domain": "http://54.79.191.17:3001"}'
+      NODE_CONFIG: '{"mongo": "mongodb+srv://forms-working:<service-name>/<formio-schema>?retryWrites=true&w=majority", "host": "", "domain": ""}'
     stdin_open: true  # -i
