--- a/config/env/production.env
+++ b/config/env/production.env
@@ -5,13 +5,8 @@ export DATE_STRFTIME_FORMAT="%d-%b-%y %H:%M:%S"
 export MESSAGE_FORMAT="%(asctime)s: [%(filename)s:%(lineno)s - %(funcName)20s() ] %(message)s"
 export LOGGING_LEVEL='INFO'
 
-export BRIDGE_OVERVIEW='bridge-overview'
-export MAPPING_DESIGN='mapping-design'
-export DIS_AS_DESIGN='dis-as-design'
-export DIS_AS_BUILT='dis-as-built'
-
-export FORMIO_URL='54.79.191.17:3001'
-export OPS_PORTAL_URL='https://configure.eloque.com'
+export FORMIO_URL='<url>:3001'
+export OPS_PORTAL_URL='<FQDN-url>'
 
 export ADMIN_USER='admin@example.com'
 export ADMIN_PASSWORD='CHANGEME'
