update layouts and add documentation

--- a/config/nginx-mini.conf
+++ b/config/nginx-mini.conf
@@ -26,14 +26,14 @@ http {
             proxy_pass   	http://host.docker.internal:3001;
         }
 
-        # proxy to ops-portal listening on localhost at 8010 (must be IP to work)
+        # proxy to forms-working listening on localhost at 8010 (must be IP to work)
         #
         location /app {
             rewrite /app(.*) /$1 break;
             proxy_pass   	http://192.168.1.11:8010;
         }
 
-        # proxy resource requests to ops-portal listening on localhost at 8010 (must be IP to work)
+        # proxy resource requests to forms-working listening on localhost at 8010 (must be IP to work)
         #
         location /form {
             rewrite /form(.*) /formio/form$1 break;
