--- a/config/nginx-production.conf
+++ b/config/nginx-production.conf
@@ -17,7 +17,7 @@ http {
 
     server {
         listen       		443 ssl;
-        server_name  		ops-portal-prod;
+        server_name  		forms-working-prod;
 	    ssl_certificate 	/etc/nginx/certs/cert.pem;
 	    ssl_certificate_key	/etc/nginx/certs/key.pem;
 	    ssl_protocols		TLSv1.1 TLSv1.2;
@@ -30,14 +30,14 @@ http {
             root   html;
         }
 
-        # proxy to ops-portal listening on localhost at 8010 (must be IP to work)
+        # proxy to forms-working listening on localhost at 8010 (must be IP to work)
         #
         location /app {
             rewrite /app(.*) /$1 break;
             proxy_pass   	http://10.2.1.184:8080;
         }
 
-        # proxy resource requests to ops-portal listening on localhost at 8010 (must be IP to work)
+        # proxy resource requests to forms-working listening on localhost at 8010 (must be IP to work)
         #
         location /form {
             rewrite /form(.*) /formio/form$1 break;
