Cleanup layout + create_admin_user

--- a/config/env/local.env
+++ b/config/env/local.env
@@ -1,12 +1,12 @@
 # Run the test scripts
-export ENVIRONMENT_TITLE="** Staging **"
-
+export ENVIRONMENT_TITLE="** Development **"
 export DATE_STRFTIME_FORMAT="%d-%b-%y %H:%M:%S"
 export MESSAGE_FORMAT="%(asctime)s: [%(filename)s:%(lineno)s - %(funcName)20s() ] %(message)s"
 export LOGGING_LEVEL='INFO'
 
-export FORMIO_URL='172.31.44.5:3001'
-export OPS_PORTAL_URL='http://3.25.74.169:8000'
+LOCALHOST=`ifconfig | fgrep broadcast | xargs | cut -d" " -f 2`
+export FORMIO_URL="$LOCALHOST:3001"
+export OPS_PORTAL_URL="http://$LOCALHOST:8000"
 
 export ADMIN_USER='admin@example.com'
 export ADMIN_PASSWORD='CHANGEME'
