All submission promote; mapping: sensors

--- a/config/env/local.env
+++ b/config/env/local.env
@@ -1,7 +1,7 @@
 # Run the test scripts
 export ENVIRONMENT_TITLE="** Development **"
 export DATE_STRFTIME_FORMAT="%d-%b-%y %H:%M:%S"
-export MESSAGE_FORMAT="%(asctime)s: [%(filename)s:%(lineno)s - %(funcName)20s() ] %(message)s"
+export MESSAGE_FORMAT="%(asctime)s: [%(filename)s:%(lineno)s - %(funcName)20s() ] %(levelname)s - %(message)s"
 export LOGGING_LEVEL='INFO'
 
 LOCALHOST=`ifconfig | fgrep broadcast | xargs | cut -d" " -f 2`
