--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ cachetools==5.2.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
+deepdiff==6.7.1
 Flask==2.1.2
 hypothesis==6.47.0
 idna==3.3
 importlib-metadata==4.11.3
 iniconfig==1.1.1
 itsdangerous==2.1.2
-jsondiff==2.0.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 numpy==1.21.6
